--- a/moonlightgaming/css/login.css
+++ b/moonlightgaming/css/login.css
@@ -32,6 +32,7 @@ header:hover {
     font-size: 20px;
     color: #330d3e;
     padding-top: 30px;
+    text-decoration: none;
 }
 li{
     padding: 20px;
