--- a/moonlightgaming/css/style.css
+++ b/moonlightgaming/css/style.css
@@ -34,6 +34,7 @@
         font-size: 20px;
         color: #330d3e;
         padding-top: 30px;
+        text-decoration: none;
     }
     li{
         padding: 20px;
@@ -209,6 +210,7 @@
             font-size: 10px;
             color: #330d3e;
             padding-top: 15px;
+            text-decoration: none;
         }
         li{
             padding: 10px;
