--- a/moonlightgaming/css/style.css
+++ b/moonlightgaming/css/style.css
@@ -9,6 +9,9 @@
     body {
         background-color: #330d3e;
     }
+    a {
+        text-decoration: none;
+    }
     header {
         display: flex;
         background-color: white;
