--- a/moonlightgaming/css/login.css
+++ b/moonlightgaming/css/login.css
@@ -7,6 +7,9 @@
 body {
     background-color: #330d3e;
 }
+a {
+   text-decoration: none;
+}
 header {
     display: flex;
     background-color: white;
